--- a/source/_posts/nips-2018.md
+++ b/source/_posts/nips-2018.md
@@ -151,3 +151,28 @@ Topic: 网络结构分析与实验
 #### A Model for Learned Bloom Filters and Optimizing by Sandwiching
 Topic: 对学习过的Bloom滤波器进行优化
 
+#### Learning to Decompose and Disentangle Representations for Video Prediction
+Topic: 视频帧预测
+
+#### Multi-Task Learning as Multi-Objective Optimization
+Topic: 多任务学习作为多目标优化问题
+
+#### Combinatorial Optimization with Graph Convolutional Networks and Guided Tree Search
+Topic: NP难问题的优化方法
+
+#### Self-Erasing Network for Integral Object Attention
+Topic: 注意力，对抗性擦除
+
+#### LinkNet: Relational Embedding for Scene Graph
+Topic: 图像理解任务
+
+#### How to Start Training: The Effect of Initialization and Architecture
+Topic: 初始化和架构如何影响训练
+
+#### Which Neural Net Architectures Give Rise to Exploding and Vanishing Gradients?
+Topic: 收敛过程中梯度的讨论
+
+#### Explanations based on the Missing: Towards Contrastive Explanations with Pertinent Negatives
+Topic: 解释神经网络
+
+#### 
