--- a/source/_posts/nips-2018.md
+++ b/source/_posts/nips-2018.md
@@ -175,4 +175,631 @@ Topic: 收敛过程中梯度的讨论
 #### Explanations based on the Missing: Towards Contrastive Explanations with Pertinent Negatives
 Topic: 解释神经网络
 
-#### 
+#### HitNet: Hybrid Ternary Recurrent Neural Network ★★★
+Topic: RNN的量化压缩方法
+
+#### A Unified Framework for Extensive-Form Game Abstraction with Bounds
+Topic: 大型游戏中的抽象问题
+
+#### Removing the Feature Correlation Effect of Multiplicative Noise
+Topic: 非相关乘法噪声，用于分类任务
+
+#### Maximum-Entropy Fine Grained Classification
+Topic: 细粒度分类任务
+
+#### On Learning Markov Chains
+Topic: 马尔可夫链理论
+
+#### A Neural Compositional Paradigm for Image Captioning
+Topic: 图像自动上字幕
+
+#### Quantifying Learning Guarantees for Convex but Inconsistent Surrogates
+Topic: 量化近似计算，用于具有树状结构损失的多类分类和具有平均精度损失的排名
+
+#### Dialog-based Interactive Image Retrieval
+Topic: 图像检索方法，在鞋类检索中的应用
+
+#### SPIDER: Near-Optimal Non-Convex Optimization via Stochastic Path-Integrated Differential Estimator
+Topic: 用于跟踪许多确定性的兴趣量，从而显著降低计算成本
+
+#### Are GANs Created Equal? A Large-Scale Study
+Topic: GAN
+
+#### Learning Disentangled Joint Continuous and Discrete Representations
+Topic: 数据集解耦
+
+#### TADAM: Task dependent adaptive metric for improved few-shot learning
+Topic: few-shot学习
+
+#### Do Less, Get More: Streaming Submodular Maximization with Subsampling
+Topic: 训练过程中对数据集采样策略的研究
+
+#### Sparse Covariance Modeling in High Dimensions with Gaussian Processes
+Topic: 研究非随机协变量的高维观测成分之间的统计关系
+
+#### Deep Neural Nets with Interpolating Function as Output Activation ★★★★
+Topic: 使用插值函数作为DNN的输出层，适用于训练数据不足的时候，能提高各种网络的泛化精度
+
+#### FishNet: A Versatile Backbone for Image, Region, and Pixel Level Prediction ★★★★★
+Topic: 通用骨干网络FishNet
+Abstract: 在ImageNet-1K上，FishNet的精度可以以更少的参数超越DenseNet和ResNet的性能
+Codes: [FishNet](https://github.com/kevin-ssy/FishNet)
+
+#### Visual Memory for Robust Path Following
+Topic: 路径追踪问题
+
+#### KDGAN: Knowledge Distillation with Generative Adversarial Networks ★★★
+Topic: 知识蒸馏
+Abstract: 提出了包括分类器、教师和鉴别器在内的蒸馏损失相互学习方法，通过对抗性损失对抗鉴别器进行对抗训练。
+
+#### Long short-term memory and Learning-to-learn in networks of spiking neurons
+Topic: RSNN，循环神经网络
+
+#### Greedy Hash: Towards Fast Optimization for Accurate Hash Coding in CNN
+Topic: 使用CNN实现精确的哈希编码，用于近似最近邻搜索
+
+#### Informative Features for Model Comparison
+Topic: 比较两个模型的指标与方法
+
+#### PointCNN: Convolution On X-Transformed Points
+Topic: 一种卷积运算方法，用于点云特征
+
+#### Connectionist Temporal Classification with Maximum Entropy Regularization ★★★★
+Topic: 解决CTC的过度拟合问题，针对场景文本识别任务
+Codes: [ENCTC](https://github.com/liuhu-bigeye/enctc.crnn)
+
+#### Large Margin Deep Networks for Classification ★★★
+Topic: 用于分类的大边际深度网络
+Abstract: 提出了一种新的损失函数，使得决策边界具有良好的性质。实验在MNIST，CIFAR-10和ImageNet上做的比较充分
+Codes: [Large_Margin](https://github.com/google-research/google-research/tree/master/large_margin)
+
+#### Generalizing Graph Matching beyond Quadratic Assignment Model
+Topic: 图匹配问题
+
+#### Solving Large Sequential Games with the Excessive Gap Technique
+Topic: 零和不完全信息广义形式游戏
+
+#### On the Dimensionality of Word Embedding
+Topic: 词嵌入的维度
+
+#### Reinforced Continual Learning
+Topic: 增强持续学习
+Abstract: 研究模型以连续的方式学习各种任务，通过强化学习策略寻找最佳的神经结构。实验在MNIST和CIFAR-100数据集为基础的顺序分类任务上所做
+
+#### Uncertainty-Aware Attention for Reliable Interpretation and Prediction
+Topic: 注意力机制，针对医学图像分析任务
+
+#### DropMax: Adaptive Variational Softmax ★★★
+Topic: softmax的改进，针对分类任务
+
+#### Posterior Concentration for Sparse Deep Learning
+Topic: 贝叶斯替代法，提出SS-DL的方法
+
+#### A flexible model for training action localization with varying levels of supervision ★★★★
+Topic: 动作检测，无监督半监督问题
+Abstract: 针对动作检测任务的监督训练样本制作量太大的问题，提出了一种替换监督信号的方法，降低了制作训练样本的工作量
+
+#### A Deep Bayesian Policy Reuse Approach Against Non-Stationary Agents
+Topic: 马尔可夫游戏中对抗非固定代理时的有效策略检测和重用技术
+
+#### Empirical Risk Minimization in Non-interactive Local Differential Privacy Revisited
+Topic: 差异隐私的非交互式本地模型中的经验风险最小化问题
+
+#### Low-shot Learning via Covariance-Preserving Adversarial Augmentation Networks
+Topic: low-shot学习，少量学习，生成对抗样本
+
+#### Learning semantic similarity in a continuous space
+Topic: 语义相似性的学习
+
+#### MetaReg: Towards Domain Generalization using Meta-Regularization
+Topic: 域泛化问题
+
+#### Boosted Sparse and Low-Rank Tensor Regression
+Topic: 合成问题
+
+#### Domain-Invariant Projection Learning for Zero-Shot Recognition
+Topic: zero-shot识别问题
+
+#### Neural-Symbolic VQA: Disentangling Reasoning from Vision and Language Understanding
+Topic: 视觉语言理解问题
+
+#### Frequency-Domain Dynamic Pruning for Convolutional Neural Networks
+Topic: 剪枝
+Abstract: 提出了一种频域动态剪枝的方法利用空间相关性。实验在CIFAR-100上做的对比。
+
+#### Quadratic Decomposable Submodular Function Minimization
+Topic: 凸优化问题
+
+#### A Block Coordinate Ascent Algorithm for Mean-Variance Optimization
+Topic: 动态决策问题，包括金融投资，自动驾驶以及医疗保健
+
+#### $l_1$-regression with Heavy-tailed Distributions
+Topic: Heavy-tailed分布问题
+
+#### Neural Nearest Neighbors Networks
+Topic: 图像去噪，单图像超分辨率
+
+#### Efficient nonmyopic batch active search
+Topic: 主动搜索，用于引文网络、材料科学和药物发现
+
+#### A Game-Theoretic Approach to Recommendation Systems with Strategic Content Providers
+Topic: 博弈论方法
+
+#### Interactive Structure Learning with Structural Query-by-Committee
+Topic: 交互式结构学习
+
+#### Global Geometry of Multichannel Sparse Blind Deconvolution on the Sphere
+Topic: 多通道稀疏盲解卷积
+
+#### Video-to-Video Synthesis
+Topic: 视频到视频的合成
+
+#### How To Make the Gradients Small Stochastically: Even Faster Convex and Nonconvex SGD
+Topic: 梯度下降以及收敛优化问题
+
+#### Synthesize Policies for Transfer and Adaptation across Tasks and Environments
+Topic: 强化学习中的迁移学习问题
+
+#### Adversarial vulnerability for any classifier
+Topic: 对抗性扰动问题
+
+#### Evolution-Guided Policy Gradient in Reinforcement Learning
+Topic: 强化学习中的梯度问题
+
+#### Toddler-Inspired Visual Object Learning
+Topic: 视觉对象学习，第一人称图像学习
+
+#### Alternating optimization of decision trees, with application to learning sparse oblique trees
+Topic: 决策树的优化问题
+
+#### FD-GAN: Pose-guided Feature Distilling GAN for Robust Person Re-identification ★★★★★
+Topic: 行人重识别，GAN
+Abstract: 提出了FD-GAN，具有人类姿势和身份的多种新颖鉴别器，还加入了新的姿态损失。
+
+#### New Insight into Hybrid Stochastic Gradient Descent: Beyond With-Replacement Sampling and Convexity
+Topic: 混合随机梯度下降
+
+#### The Lingering of Gradients: How to Reuse Gradients Over Time
+Topic: 梯度延续
+
+#### Unsupervised Learning of View-invariant Action Representations
+Topic: 视角不变的情况下动作表示问题
+
+#### Fairness Behind a Veil of Ignorance: A Welfare Analysis for Automated Decision Making
+Topic: 自动化决策系统公平性问题
+
+#### Global Gated Mixture of Second-order Pooling for Improving Deep Convolutional Neural Networks
+Topic: 全局门控二阶池化方法
+
+#### Image-to-image translation for cross-domain disentanglement
+Topic: 图像与图像的转换问题，用于跨域检索等任务
+
+#### Gradient Sparsification for Communication-Efficient Distributed Optimization
+Topic: 梯度稀疏化
+
+#### Revisiting Multi-Task Learning with ROCK: a Deep Residual Auxiliary Block for Visual Detection
+Topic: 多任务学习
+
+#### Adaptive Online Learning in Dynamic Environments
+Topic: 自适应在线学习
+
+#### FRAGE: Frequency-Agnostic Word Representation
+Topic: 词表示问题
+
+#### Generative Neural Machine Translation
+Topic: 生成神经机器翻译
+
+#### Found Graph Data and Planted Vertex Covers
+Topic: 数据挖掘问题
+
+#### Joint Active Feature Acquisition and Classification with Variable-Size Set Encoding
+Topic: 特征子集顺序选取问题
+
+#### Regularization Learning Networks: Deep Learning for Tabular Datasets
+Topic: 表格数据的深度学习方法
+
+#### Multitask Boosting for Survival Analysis with Competing Risks
+Topic: 预测多种疾病并发风险的人群
+
+#### Geometry Based Data Generation
+Topic: 数据生成
+
+#### SLAYER: Spike Layer Error Reassignment in Time
+Topic: SNN尖峰神经网络训练问题
+
+#### On Oracle-Efficient PAC RL with Rich Observations
+Topic: PAC强化学习的计算易处理性
+
+#### Gradient Descent for Spiking Neural Networks
+Topic: SNN尖峰神经网络训练问题
+
+#### Generalizing Tree Probability Estimation via Bayesian Networks
+Topic: 贝叶斯网络的应用改进问题
+
+#### Where Do You Think You're Going?: Inferring Beliefs about Dynamics from Behavior
+Topic: 意图推断，从行为中推断出意图
+
+#### Designing by Training: Acceleration Neural Network for Fast High-Dimensional Convolution
+Topic: 高维卷积运算的加速问题
+
+#### Understanding the Role of Adaptivity in Machine Teaching: The Case of Version Space Learners
+Topic: 交互式环境中的教育问题，自适应教学算法
+
+#### A loss framework for calibrated anomaly detection
+Topic: 异常检测问题
+
+#### PacGAN: The power of two samples in generative adversarial networks
+Topic: GAN
+
+#### Variational Memory Encoder-Decoder
+Topic: 神经编解码器
+
+#### Stochastic Composite Mirror Descent: Optimal Bounds with High Probabilities
+Topic: 随机复合镜像下降
+
+#### Hybrid Retrieval-Generation Reinforced Agent for Medical Image Report Generation
+Topic: 医学图像报告生成问题
+
+#### Overcoming Language Priors in Visual Question Answering with Adversarial Regularization
+Topic: VQA问题
+
+#### Hybrid Knowledge Routed Modules for Large-scale Object Detection
+Topic: 大规模目标检测问题，知识推理，知识路由
+
+#### Bilinear Attention Networks
+Topic: 双线性注意力网络，视觉问答任务
+
+#### Parsimonious Quantile Regression of Financial Asset Tail Dynamics via Sequential Learning ★★★
+Topic: 序列学习
+
+#### Multi-Class Learning: From Theory to Algorithm
+Topic: 多元学习，多分类问题的泛化性能
+
+#### Multivariate Time Series Imputation with Generative Adversarial Networks
+Topic: 生成对抗网络，多变量时间序列问题
+
+#### Learning Versatile Filters for Efficient Convolutional Neural Networks
+Topic: 高效卷积神经网络，通用滤波器
+
+#### Accelerated Stochastic Matrix Inversion: General Theory and Speeding up BFGS Rules for Faster Second-Order Optimization
+Topic: 神经网络计算理论
+
+#### DifNet: Semantic Segmentation by Diffusion Networks
+Topic: 语义分割
+Abstract: 将语义分割看作两个子任务，每个分支网络用于一个子任务，在VOC和Context数据集上性能不错。
+
+#### Conditional Adversarial Domain Adaptation
+Topic: 对抗学习的方法问题
+
+#### Neighbourhood Consensus Networks
+Topic: 目标或者实例级别的匹配比对问题
+
+#### Relating Leverage Scores and Density using Regularized Christoffel Functions
+Topic: 人工密度统计问题
+
+#### Non-Local Recurrent Network for Image Restoration
+Topic: 图像修复，循环递归网络
+
+#### Bayesian Semi-supervised Learning with Graph Gaussian Processes
+Topic: 贝叶斯半监督学习
+
+#### Foreground Clustering for Joint Segmentation and Localization in Videos and Images
+Topic: 前景聚类问题，结合了分割和定位算法
+
+#### Video Prediction via Selective Sampling
+Topic: 视频预测问题，选择性采样策略
+
+#### Distilled Wasserstein Learning for Word Embedding and Topic Modeling ★★★
+Topic: 蒸馏Wasserstein学习，词嵌入，主题建模
+
+#### Learning to Exploit Stability for 3D Scene Parsing ★★★
+Topic: 人类场景理解任务
+Abstract: 提出一种名为Prim R-CNN的3D场景解析架构，学习预测边界框以及3D大小，平移和旋转
+
+#### Neural Guided Constraint Logic Programming for Program Synthesis
+Topic: 回归神经网络，图神经网络，外部约束
+
+#### Genetic-Gated Networks for Deep Reinforcement Learning
+Topic: 增强学习
+
+#### Fighting Boredom in Recommender Systems with Linear Reinforcement Learning
+Topic: 强化学习，推荐系统
+
+#### Enhancing the Accuracy and Fairness of Human Decision Making
+Topic: 决策系统
+
+#### Temporal Regularization for Markov Decision Process
+Topic: 马尔可夫决策过程
+
+#### The Pessimistic Limits and Possibilities of Margin-based Losses in Semi-supervised Learning
+Topic: 分类问题中的半监督训练改进方法
+
+#### Simple random search of static linear policies is competitive for reinforcement learning
+Topic: 强化学习的策略
+
+#### Generating Informative and Diverse Conversational Responses via Adversarial Information Maximization
+Topic: 对抗性学习框架，神经对话模型
+
+#### Entropy and mutual information in models of deep neural networks
+Topic: 神经网络模型中的熵和互信息
+
+#### Collaborative Learning for Deep Neural Networks
+Topic: 协同学习，在CIFAR和ImageNet中的实验验证
+
+#### High Dimensional Linear Regression using Lattice Basis Reduction
+Topic: 高维线性回归问题
+
+#### Symbolic Graph Reasoning Meets Convolutions
+Topic: 符号图推理迎合卷积
+
+#### DVAE#: Discrete Variational Autoencoders with Relaxed Boltzmann Priors
+Topic: 离散变分自助编码器
+
+#### Partially-Supervised Image Captioning
+Topic: 图像字幕问题
+
+#### 3D-Aware Scene Manipulation via Inverse Graphics
+Topic: 3D感知场景操作
+
+#### Random Feature Stein Discrepancies
+Topic: 随机特征Stein差异
+
+#### Distributed Stochastic Optimization via Adaptive SGD
+Topic: 自适应SGD的分布式随机优化
+
+#### Precision and Recall for Time Series
+Topic: 时间序列的精度与召回指标
+
+#### Deep Attentive Tracking via Reciprocative Learning ★★★★★
+Topic: 注意力机制，跟踪算法，互惠学习
+Abstract: 提出了一种利用视觉注意力来训练深度分类器的互惠学习算法，分类器着眼于外观变化具有鲁棒性的目标对象区域。从而使得跟踪算法表现出色
+Authors: 腾讯AI Lab
+Codes: [DAT](https://ybsong00.github.io/nips18_tracking/index)
+
+#### Virtual Class Enhanced Discriminative Embedding Learning ★★★★★
+Topic: 虚拟softmax，学习辨别特征
+Abstract: 学习辨别特征以提高识别性能逐渐成为深度学习的首要目标。本文提出一种新颖但极其简单的方法Virtual Softmax，通过在原始Softmax中注入动态虚拟负类来增强学习特征的判别性。实验在各种目标分类任务和人脸验证任务中显示了优越性。
+
+#### Attention in Convolutional LSTM for Gesture Recognition
+Topic: LSTM，手势识别
+
+#### Pelee: A Real-Time Object Detection System on Mobile Devices ★★★★★
+Topic: 实时目标检测
+
+#### Universal Growth in Production Economies
+Topic: 生产经济问题
+
+#### Bayesian Model Selection Approach to Boundary Detection with Non-Local Priors
+Topic: 贝叶斯模型选择程序，用于磁共振成像的数据
+
+#### Efficient Stochastic Gradient Hard Thresholding
+Topic: 随机梯度阈值
+
+#### SplineNets: Continuous Neural Decision Graphs ★★★★
+Topic: 卷积神经网络使用条件的方法，用于降低CNN的运行时负责性和成本
+Abstract: 一种神经网络推理加速的方法
+Authors: google
+
+#### Generalized Zero-Shot Learning with Deep Calibration Network
+Topic: Zero-Shot学习
+
+#### Neural Architecture Search with Bayesian Optimisation and Optimal Transport
+Topic: 网络结构优化搜索
+
+#### Embedding Logical Queries on Knowledge Graphs ★★★★
+Topic: 知识图，逻辑查询
+Abstract: 学习知识图的低维嵌入是用于预测实体之间未观察到或缺失边缘的有效方法。本文介绍一个框架，以有效地预测关于联合逻辑查询 - 一阶逻辑的灵活但易处理的子集 - 在不完全知识图谱上
+
+#### Learning Optimal Reserve Price against Non-myopic Bidders
+Topic: 投标价格预测问题
+
+#### Sequential Context Encoding for Duplicate Removal
+Topic: 顺序上下文编码
+
+#### Discovery of Latent 3D Keypoints via End-to-end Geometric Reasoning
+Topic: 几何推理，3D关键点定位
+
+#### Nonparametric learning from Bayesian models with randomized objective functions
+Topic: 贝叶斯模型
+
+#### SEGA: Variance Reduction via Gradient Sketching
+Topic: 训练收敛问题
+
+#### Automatic Program Synthesis of Long Programs with a Learned Garbage Collector
+Topic: 自动代码生成
+
+#### One-Shot Unsupervised Cross Domain Translation
+Topic: 跨域迁移问题，one-shot非监督学习
+
+#### Regularizing by the Variance of the Activations' Sample-Variances ★★★
+Topic: BN技术的改进方法
+Abstract: 建议添加一个损失项到正则化项中，将其链接到BN方法后，能提升准确性
+
+#### Overlapping Clustering Models, and One (class) SVM to Bind Them All
+Topic: SVM用于重叠聚类问题
+
+#### Algorithmic Linearly Constrained Gaussian Processes
+Topic: 高斯过程
+
+#### DeepExposure: Learning to Expose Photos with Asynchronously Reinforced Adversarial Learning
+Topic: 对抗性学习，曝光照片
+
+#### Norm matters: efficient and accurate normalization schemes in deep networks ★★★
+Topic: 规范化方法
+Abstract: 文章提出了关于归一化方法和权重衰减的目的和功能的新观点，作为将权重范数与基础优化目标分离的工具。
+
+#### Dual Principal Component Pursuit: Improved Analysis and Efficient Algorithms
+Topic: 双主成分追踪
+
+#### MULAN: A Blind and Off-Grid Method for Multichannel Echo Retrieval
+Topic: 多通道回声检索
+
+#### Mixture Matrix Completion
+Topic: 混合矩阵完成，数据科学
+
+#### Trajectory Convolution for Action Recognition ★★★★
+Topic: 动作识别的轨迹卷积
+Abstract: 提出了一种有效的视频特征学习方法，提出了一个新的CNN架构TrajectoryNet，考虑到由变形或运动引起的内容变化，允许视觉特征沿着运动路径，轨迹聚合。
+Authors: Amzon，香港中文大学
+
+#### The Description Length of Deep Learning models
+Topic: 深度神经网络模型的无损压缩编码
+
+#### A Smoothed Analysis of the Greedy Algorithm for the Linear Contextual Bandit Problem
+Topic: 贪心算法，强盗问题
+
+#### Revisiting Decomposable Submodular Function Minimization with Incidence Relations
+Topic: 关联关系，子模函数最小化
+
+#### A Practical Algorithm for Distributed Clustering and Outlier Detection
+Topic: 分布式聚类，异常检测算法
+
+#### Learning to Reconstruct Shapes from Unseen Classes
+Topic: 未见过的类别学习
+
+#### BourGAN: Generative Networks with Metric Embeddings
+Topic: GAN，度量嵌入
+
+#### Smoothed analysis of the low-rank approach for smooth semidefinite programs
+Topic: 平滑分析，半定规划
+
+#### Zero-Shot Transfer with Deictic Object-Oriented Representation in Reinforcement Learning
+Topic: Zero-Shot迁移学习，增强学习
+
+#### Overfitting or perfect fitting? Risk bounds for classification and regression rules that interpolate
+Topic: 过拟合界限分析
+
+#### Breaking the Span Assumption Yields Fast Finite-Sum Minimization
+Topic: 大数据挖掘中更快的算法
+
+#### Structured Local Minima in Sparse Blind Deconvolution
+Topic: 结构化局部最小值
+
+#### GIANT: Globally Improved Approximate Newton Method for Distributed Optimization
+Topic: 优化方法
+
+#### Modelling sparsity, heterogeneity, reciprocity and community structure in temporal interaction data
+Topic: 交互数据的建模
+
+#### Non-monotone Submodular Maximization in Exponentially Fewer Iterations
+Topic: 非单调子模块最大化
+
+#### MetaGAN: An Adversarial Approach to Few-Shot Learning
+Topic: few-shot学习，对抗性方法
+
+#### Local Differential Privacy for Evolving Data
+Topic: 数据隐私与数据进化
+
+#### Gaussian Process Conditional Density Estimation
+Topic: 条件密度估计
+
+#### Meta-Gradient Reinforcement Learning
+Topic: 强化学习，元梯度
+
+#### Modular Networks: Learning to Decompose Neural Computation
+Topic: 神经计算的分解
+
+#### Learning to Navigate in Cities Without a Map
+Topic: 无地图导航
+
+#### Query Complexity of Bayesian Private Learning
+Topic: 贝叶斯私人学习
+
+#### A theory on the absence of spurious solutions for nonconvex and nonsmooth optimization
+Topic: 非凸非光滑优化问题
+
+#### Recurrent World Models Facilitate Policy Evolution
+Topic: 策略进化
+
+#### Ridge Regression and Provable Deterministic Ridge Leverage Score Sampling
+Topic: 岭回归与岭分数抽样
+
+#### Wasserstein Variational Inference
+Topic: Wasserstein变分推理
+
+#### How Does Batch Normalization Help Optimization?
+Topic: BN的实用性探讨
+
+#### Verifiable Reinforcement Learning via Policy Extraction
+Topic: 强化学习
+
+#### Leveraged volume sampling for linear regression
+Topic: 线性回归中的采样策略
+
+#### Model Agnostic Supervised Local Explanations
+Topic: 模型不可知监督
+
+#### A Linear Speedup Analysis of Distributed Deep Learning with Sparse and Quantized Communication
+Topic: 分布式深度学习
+
+#### Active Learning for Non-Parametric Regression Using Purely Random Trees
+Topic: 主动学习
+
+#### Tree-to-tree Neural Networks for Program Translation
+Topic: 程序翻译
+
+#### Batch-Instance Normalization for Adaptively Style-Invariant Neural Networks
+Topic: 批处理实例归一化
+
+#### Structural Causal Bandits: Where to Intervene?
+Topic: 结构性因果分析
+
+#### Answerer in Questioner's Mind: Information Theoretic Approach to Goal-Oriented Visual Dialog
+Topic: 视觉对话问题
+
+#### A Unified Feature Disentangler for Multi-Domain Image Translation and Manipulation
+Topic: 多域图像转换
+
+#### Online Learning with an Unknown Fairness Metric
+Topic: 在线学习问题
+
+#### Isolating Sources of Disentanglement in Variational Autoencoders
+Topic: 变分自动编码器
+
+#### Contextual bandits with surrogate losses: Margin bounds and efficient algorithms
+Topic: 情景强盗学习
+
+#### Representation Learning for Treatment Effect Estimation from Observational Data
+Topic: 表征学习
+
+#### Representation Balancing MDPs for Off-policy Policy Evaluation
+Topic: 强化学习策略问题
+
+#### Out of the Box: Reasoning with Graph Convolution Nets for Factual Visual Question Answering
+Topic: 图卷积网络，视觉问答
+
+#### Causal Discovery from Discrete Data using Hidden Compact Representation
+Topic: 离散数据因果关系挖掘
+
+#### Natasha 2: Faster Non-Convex Optimization Than SGD ★★★
+Topic: 比SGD更快的非凸优化方法
+
+#### Minimax Statistical Learning with Wasserstein distances
+Topic: Wasserstein距离，统计学习
+
+#### Provable Variational Inference for Constrained Log-Submodular Models
+Topic: 可证变分推理
+
+#### Learning Hierarchical Semantic Image Manipulation through Structured Representations
+Topic: 学习分层语义操作
+
+#### Processing of missing data by neural networks
+Topic: 处理丢失的数据
+
+#### Safe Active Learning for Time-Series Modeling with Gaussian Processes
+Topic: 时间序列建模，主动学习
+
+#### Optimal Algorithms for Non-Smooth Distributed Optimization in Networks
+Topic: 分布式优化算法
+
+#### Computing Higher Order Derivatives of Matrix and Tensor Expressions
+Topic: 矩阵和张量的高阶导数
+
+#### Paraphrasing Complex Network: Network Compression via Factor Transfer
+Topic: 网络压缩
+Abstract: 提出了一种新颖的知识迁移方法，使用卷积运算来解释教师的知识并为学生翻译。使用所提出的因子转移方法训练的学生网络优于传统的知识转移方法。实验在CIFAR-10，CIFAR-100和ImageNet 2015上进行，并且在VOC2007的目标检测任务上进行了应用
+
+
+★★★
+★★★★
+★★★★★
